added getAllMsgByRoom
