# schemas/messages.js
@@ -1,8 +1,8 @@
 const Joi = require("joi");
 
 const msgSchema = Joi.object({
-  content: Joi.string().max(300).messages({
-    "string.max": "The description must be no more 300 symbols.",
+  content: Joi.string().max(1000).messages({
+    "string.max": "The description must be no more 1000 symbols.",
   }),
 });
 
