# schemas/users.js
@@ -1,9 +1,7 @@
 const Joi = require("joi");
 
-const { nameRegex } = require("../constants/constants");
-
 const userSchema = Joi.object({
-  name: Joi.string().min(2).max(26).pattern(nameRegex).required().messages({
+  name: Joi.string().min(2).max(26).required().messages({
     "string.base": "The name must be a string of 2 to 26 symbols.",
     "any.required": "The name field is required.",
     "string.min": "The name must be not less 2 symbols.",
